--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,3 +20,15 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind C-] setw synchronize-panes on
+bind C-[ setw synchronize-panes off 
+
+#Tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+#Initializing tmux plugin manager
+run '~/.tmux/plugins/tpm/tpm'
