--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,9 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+bind -n C-Right next-window
+bind -n C-Left previous-window
+
 bind C-] setw synchronize-panes on
 bind C-[ setw synchronize-panes off 
 
