Few changes from Macmini

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,14 +4,8 @@ source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline
 
 setw -g mode-keys vi
 
-set-option -g default-terminal "screen-256color"
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-utf8 on
-set-option -g status-justify "left"
-
 unbind-key C-b
-set -g prefix C-a
+set -g prefix C-j
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -23,6 +17,9 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind C-] setw synchronize-panes on
 bind C-[ setw synchronize-panes off 
+
+bind C-S-n next-window
+bind C-S-p previous-window
 
 #Tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
