--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,3 @@
-run-shell "powerline-daemon -q"
-
-source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
-
 setw -g mode-keys vi
 
 unbind-key C-b
@@ -29,3 +25,5 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 #Initializing tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
+
+source ~/.tmux_airline_theme
