--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 setw -g mode-keys vi
 
 unbind-key C-b
-set -g prefix C-j
+set -g prefix C-a
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
