Added mouse to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,19 +11,38 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind C-] setw synchronize-panes on
-bind C-[ setw synchronize-panes off 
+source ~/.vim/.tmux_airline_theme
 
-bind C-S-n next-window
-bind C-S-p previous-window
+set-option -g repeat-time 500
 
-#Tmux plugins
+
+
+# Synchronize panes
+bind-key * set-window-option synchronize-pane
+
+# Reload ~/.tmux.conf
+bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
+
+# Set colors
+set -g default-terminal "screen-256color"
+
+bind-key & kill-window
+bind-key x kill-pane
+
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-#Initializing tmux plugin manager
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
+
+set-option -g mouse on
+# set-option -g mode-mouse copy-mode
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-source ~/.tmux_airline_theme
