--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,17 @@
+
 setw -g mode-keys vi
 
+# Mouse selection pane on
+set -g mouse on
+
+set-option -g default-terminal "screen-256color"
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-utf8 on
+set-option -g status-justify "left"
+
 unbind-key C-b
-set -g prefix C-j
+set -g prefix C-a
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -11,19 +21,29 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind C-] setw synchronize-panes on
-bind C-[ setw synchronize-panes off 
+# Synchronize panes
+bind-key * set-window-option synchronize-pane
 
-bind C-S-n next-window
-bind C-S-p previous-window
+# Reload ~/.tmux.conf
+bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 
-#Tmux plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+bind-key & kill-window
+bind-key x kill-pane
 
+source ~/.vim/.tmux_airline_theme
+
+# List of plugins
+# set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-#Initializing tmux plugin manager
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-source ~/.tmux_airline_theme
+ource ~/.tmux_airline_theme
