Few changes for bsd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,13 @@
 setw -g mode-keys vi
+set-option -g default-shell /usr/local/bin/zsh
 
 # Mouse selection pane on
-set -g mouse on
 
 set-option -g default-terminal "screen-256color"
 set-option -g status on
 set-option -g status-interval 2
 set-option -g status-utf8 on
 set-option -g status-justify "left"
-
-unbind-key C-b
-set -g prefix C-a
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
