--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 setw -g mode-keys vi
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /usr/local/bin/bash
 
 # Mouse selection pane on
 
@@ -25,8 +25,6 @@ bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 
 bind-key & kill-window
 bind-key x kill-pane
-
-source ~/.vim/.tmux_airline_theme
 
 # List of plugins
 # set -g @plugin 'tmux-plugins/tpm'
