--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-
 setw -g mode-keys vi
 
 # Mouse selection pane on
@@ -33,7 +32,7 @@ bind-key x kill-pane
 source ~/.vim/.tmux_airline_theme
 
 # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -46,4 +45,4 @@ set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-ource ~/.tmux_airline_theme
+source ~/.tmux_airline_theme
