--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,3 +48,5 @@ set -g @continuum-restore 'on'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 source ~/.tmux_airline_theme
+
+set -g escape-time 10
