A lot of changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 bind-key & kill-window
 bind-key x kill-pane
 
-source ~/.vim/.tmux_airline_theme
+# source ~/.vim/.tmux_airline_theme
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
