--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,7 @@ set-option -g default-shell /bin/zsh
 setw -g mode-keys vi
 
 # Mouse selection pane on
-set -g mouse on
-
+set-option -g -q mouse on
 set-option -g default-terminal "screen-256color"
 set-option -g status on
 set-option -g status-interval 2
