--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,9 @@ set-option -g status-justify "left"
 unbind-key C-b
 set -g prefix C-a
 
+# Prefix a
+bind-key a send-prefix
+
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
