--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell /bin/zsh
+set -g default-shell $SHELL
 
 setw -g mode-keys vi
 
@@ -48,3 +48,5 @@ set -g @continuum-restore 'on'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g escape-time 10
+
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
