--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,10 @@ set-option -g status-interval 2
 set-option -g status-utf8 on
 set-option -g status-justify "left"
 
+# Change color for active page
+set -g window-style 'bg=colour18'
+set -g window-active-style 'bg=black'
+
 unbind-key C-b
 set -g prefix C-a
 
