--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,6 @@ set-option -g -q mouse on
 set-option -g default-terminal "screen-256color"
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-utf8 on
 set-option -g status-justify "left"
 
 # Change color for active page
@@ -41,9 +40,15 @@ source ~/.vim/.tmux_airline_theme
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Tmux-better-mouse-mode settings
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
