Add bunch of changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,17 @@
+# Colors
+tmux_bg="colour19"
+tmux_fg="colour7"
+tmux_active_bg="colour08"
+tmux_sel_bg="#3E4452"
+tmux_border_fg="#353a41"
+tmux_active_border_fg="#515663"
+
 set -g default-shell $SHELL
 
 setw -g mode-keys vi
 
 # Mouse selection pane on
-set-option -g -q mouse on
+# set-option -g -q mouse on
 set-option -g default-terminal "screen-256color"
 set-option -g status on
 set-option -g status-interval 2
@@ -36,17 +44,16 @@ bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 bind-key & kill-window
 bind-key x kill-pane
 
-source ~/.vim/.tmux_airline_theme
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 # Tmux-better-mouse-mode settings
-set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+# set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
@@ -59,4 +66,34 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g escape-time 10
 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# Statusline
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-right-length "100"
+set -g status-left-length "100"
+
+set -g status-style bg=$tmux_bg,fg=$tmux_fg
+
+set -g message-style bg=$tmux_bg,fg=$tmux_fg
+
+set -g message-command-style fg=$tmux_fg,bg=$tmux_bg
+
+setw -g window-status-format " [#I] #W "
+setw -g window-status-current-format "#[bg=$tmux_active_bg] [#I] #W#{?window_zoomed_flag, ⓩ ,} "
+
+setw -g window-status-style bg=$tmux_bg,fg=$tmux_fg
+
+setw -g window-status-activity-style fg=$tmux_fg,bg=$tmux_bg,underscore
+
+set -g pane-border-style fg=$tmux_border_fg
+set -g pane-active-border-style fg=$tmux_active_border_fg
+
+setw -g window-status-separator ""
+set -g status-left " #S #{?client_prefix, A , - }"
+set -g status-right "#{battery_percentage} / %R "
+
+# tmux-better-mouse-mode settings
+# set -g @scroll-without-changing-pane "on"
