--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,6 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Synchronize panes
 bind-key * set-window-option synchronize-pane
@@ -60,9 +59,6 @@ set -g @resurrect-strategy-nvim 'session'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 
 set -g escape-time 10
 
@@ -97,3 +93,6 @@ set -g status-right "#{battery_percentage} / %R "
 
 # tmux-better-mouse-mode settings
 # set -g @scroll-without-changing-pane "on"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
