Commit all the latest changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,5 +94,11 @@ set -g status-right "#{battery_percentage} / %R "
 # tmux-better-mouse-mode settings
 # set -g @scroll-without-changing-pane "on"
 
+set-option -g focus-events on
+set-option -sa terminal-overrides ',XXX:RGB'
+
+run-shell /tmp/logging.tmux
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+
