--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "coc.preferences.jumpCommand": "tabe",
   "python.jediEnabled": true,
   "python.jediPath": "/usr/local/var/pyenv/versions/nvim/lib/python3.8/site-packages",
   "python.venvFolders": ["envs", ".pyenv"],
