--- a/alacritty.yml
+++ b/alacritty.yml
@@ -114,7 +114,7 @@ font:
 
   # Point size
   size: 16.0
-  use_thin_strokes: true
+  AppleFontSmoothing: true
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -131,19 +131,6 @@ font:
 
   # Thin stroke font rendering (macOS only)
   #
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`
-  #
-  # macOS >= 10.14.x:
-  #
-  # If the font quality on non-retina display looks bad then set
-  # `use_thin_strokes` to `true` and enable font smoothing by running the
-  # following command:
-  #   `defaults write -g CGFontRenderingFontSmoothingDisabled -bool NO`
-  #
-  # This is a global setting and will require a log out or restart to take
-  # effect.
-  use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
@@ -247,7 +234,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
+window.opacity: 1.0
 
 # Mouse bindings
 #
@@ -279,23 +266,19 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
-    # URL launcher
-    #
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux) xdg-open
-    #   - (Windows) explorer
-    #launcher: xdg-open
-
-    # URL modifiers
-    #
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    modifiers: Command
+    # hints:
+    #   enabled:
+    #    - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:
+    #    ..|news:|file:|git:|ssh:|ftp:)\
+    #              [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+    #      command: firefox
+    #      post_processing: true
+    #      mouse:
+    #        enabled: true
+    #        mods: None
+    #      binding:
+    #        key: U
+    #        mods: Command
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
@@ -346,8 +329,7 @@ live_config_reload: true
 # backend cannot be initialized.
 enable_experimental_conpty_backend: false
 
-# Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: true
+window.option_as_alt: true
 
 # Key bindings
 #
