--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ setw -g mode-keys vi
 
 # Mouse selection pane on
 # set-option -g -q mouse on
+set -g mouse on
+
 set-option -g default-terminal "screen-256color"
 set-option -g status on
 set-option -g status-interval 2
