--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g default-shell $SHELL
 setw -g mode-keys vi
 
 # Mouse selection pane on
-# set-option -g -q mouse on
+set-option -g -q mouse on
 set-option -g default-terminal "screen-256color"
 set-option -g status on
 set-option -g status-interval 2
